[metadata]
license_files = LICENSE

[bdist_wheel]
universal=0

[isort]
profile = black

[mypy]
python_version = 3.10
disallow_untyped_calls = False
disallow_untyped_defs = True
check_untyped_defs = True
exclude = tests/|venv/|dev/|examples/
no_strict_optional = True
disable_error_code = attr-defined, override, union-attr

[flake8]
ignore = E203, E266, E501, W503, F403, F401, E741, C901, W405, E402, E211
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tool:pytest]
addopts = 
    -m 'not long'
